My first commit :rocket:

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 	</head>
 	<body>
 		<script src="https://threejs.org/build/three.js"></script>
-		<script>
-			// Our Javascript will go here.
-		</script>
+        <script src="js/1-RollCube.js"></script>
 	</body>
 </html>
