--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Three.js</title>
+        <title>Three.js</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 		<style>
+            html{background: black;}
 			body { margin: 0; }
+            #overlay {
+                position: absolute;
+                font-family: 'Roboto Mono', monospace;
+                top: 10px;
+                width: 100%;
+                text-align: center;
+                z-index: 100;
+                display:block;
+                color: white;
+            }
 		</style>
 	</head>
 	<body>
+        <div id="overlay"><h2>This cube has been rolling for </h2><h2 id="clock"><span class="days"></span>:<span class="hours"></span>:<span class="minutes"></span>:<span class="seconds"></span></h2></div>
 		<script src="https://threejs.org/build/three.js"></script>
         <script src="js/1-RollCube.js"></script>
+        <script src="js/0-Clock.js"></script>
 	</body>
 </html>
