--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-        <title>Three.js</title>
+        <title>Roll Cube - Three.js</title>
+        <link rel="icon" type="svg" href="/RollCube.svg" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 		<style>
